--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
         "@tailwindcss/typography": "^0.5.10",
         "@vitejs/plugin-vue": "^5.0.0",
         "autoprefixer": "^10.4.16",
-        "axios": "^1.6.4",
+        "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0",
-        "vue": "^3.3.13"
+        "vue": "^3.4.37"
+    },
+    "dependencies": {
+        "puppeteer": "^23.1.0",
+        "vuetify": "^3.6.14"
     }
 }
