--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+QLS_API_USER=YOUR-QLS-USERNAME
+QLS_API_USER_PASSWORD=YOUR-QLS-PASSWORD
+
+# This is only for demo purposes in a live app you would get this on the go using the above credentials
+QLS_COMPANY_ID=YOUR-QLS-COMPANY-ID
+QLS_BRAND_ID=YOUR-QLS-BRAND-ID
